# VaultNodes

./: .bash_history  .claude.json  .claude.json.backup  .env.sample  .gitignore  .profile  .wget-hsts  AGENTS.md  BUILD.bazel  MODULE.bazel  Makefile  README.md  README_ENHANCED.md  architecture.md  code_1.105.1-1760482543_amd64.deb  conftest.py  main_enhanced.cpp  openai.chatgpt-0.4.19.vsix  orchestrator.py  platformio_enhanced.ini  pytest.ini  requirements.txt  requirements_lock.txt  sitecustomize.py
Echo-Community-Toolkit/: .gitignore  AGENTS.md  ARCHIVE.md  HOW_TO_BE_YOU.md  MRP-LSB-Integration-Guide.md  Makefile  README.md  README_G2V_SCAFFOLD.md  README_LLM.md  README_LSB_SCAFFOLD.md  README_MRP_SCAFFOLD.md  README_SOURCE_SCAFFOLD.md  bloom.py  echo-garden-quantum-triquetra.html  echo-hilbert-chronicle.html  final_validation.py  hyperfollow-integration.js  mrp_verify.py  package-lock.json  package.json  proof-of-love-acorn.html  pyproject.toml  pytest.ini  requirements.txt  test_mrp_verification.py  unified-lambda-echo-complete.html  verify_updated_system.py
Echo-Community-Toolkit/.github/workflows/: ci.yml  echo-soulcode-ci.yml  hyperfollow-integration.yml  zone-identifier-scan.yml
Echo-Community-Toolkit/agents/: __init__.py  bloom_chain.py  glyph_agent.py  lsb_agent.py  mrp_agent.py  state.py
Echo-Community-Toolkit/assets/data/: LSB1_Mantra.txt  echo_key_decoded.json  mrp_lambda_B_payload.json  mrp_lambda_state_sidecar.json
Echo-Community-Toolkit/docs/: ARCHITECTURE_INDEX.md  DESIGN.md  LEDGER_AND_BLOOM_CHAIN.md  LSB_Extractor_README.md  MRP_Integration_Guide.md  MRP_LSB_Quick_Reference.md  PRODUCTION_TEST_SUMMARY.md  Project-Instructions-LSB-Decoder-Encoder.txt  README_MRP.md  TINK_NOTES.md  architecture.md  index.md  lsb1_developer_reference.md  lsb1_mrp_qa_plan.md  updated_toolkit_report.md  vision_ascii_display.txt
Echo-Community-Toolkit/echo-soulcode-architecture/: README.md  UNIFY_REPORT.md
Echo-Community-Toolkit/echo-soulcode-architecture/.github/workflows/: ci.yml
Echo-Community-Toolkit/echo-soulcode-architecture/docs/: API.md  ARCHITECTURE.md  GLYPHS.md
Echo-Community-Toolkit/echo-soulcode-architecture/docs/modules/hilbert/: README.md
Echo-Community-Toolkit/echo-soulcode-architecture/docs/modules/operators/: README.md
Echo-Community-Toolkit/echo-soulcode-architecture/docs/modules/schema/: README.md
Echo-Community-Toolkit/echo-soulcode-architecture/examples/: example_config.json
Echo-Community-Toolkit/echo-soulcode-architecture/examples/anchors/: anchors_build.py
Echo-Community-Toolkit/echo-soulcode-architecture/soulcode/: SoulcodeREADME.md  spec.squirrel.json
Echo-Community-Toolkit/echo-soulcode-architecture/src/agents/: llm_agent.py
Echo-Community-Toolkit/echo-soulcode-architecture/src/echo_soulcode/: README.live_read.md  README.operators.md  README.soulcode.md  __init__.py  hilbert.py  schema.py
Echo-Community-Toolkit/echo-soulcode-architecture/tests/: __init__.py  conftest.py  test_hilbert.py  test_operators.py  test_operators_extended.py  test_schema_bundle_minimal.py  test_schema_single_minimal.py  test_soulcode_dev.py  test_validate_module.py
Echo-Community-Toolkit/examples/: demo.py  demo_stack_and_project.py  mrp_demo.py
Echo-Community-Toolkit/examples/data/: layer0.npy  projection_30deg.npy  volume.npy
Echo-Community-Toolkit/lambda-vite/: mrp_lambda_B_payload.json  mrp_lambda_G_payload.json  mrp_lambda_R_payload.json  mrp_verify.py  package-lock.json  package.json
Echo-Community-Toolkit/lambda-vite/MRP_Seed_Package/: mrp_decode_report.json  mrp_decoded_message.txt  mrp_encode_info.json
Echo-Community-Toolkit/lambda-vite/lambda-vite/: package.json
Echo-Community-Toolkit/lambda-vite/lambda-vite/src/ops/: ops.ts
Echo-Community-Toolkit/lambda-vite/src/: App.tsx  LambdaStateViewer.tsx
Echo-Community-Toolkit/lambda-vite/src/ops/: ops.ts
Echo-Community-Toolkit/network/: glyph_batch.py  server.py
Echo-Community-Toolkit/scripts/: apply_ac_protocols.py  embed_golden_echo_key.py  g2v_minimal_checks.py  log_mantra_event.py  mrp_validate_rgb.py  mrp_verify.py  source_layout_diagrams.py  verify_ledger_and_chain.py
Echo-Community-Toolkit/src/: lsb_encoder_decoder.py  lsb_extractor.py
Echo-Community-Toolkit/src/g2v/: cli.py  fft_codec.py  volume.py
Echo-Community-Toolkit/src/mrp/: __init__.py  channels.py  cli.py  codec.py  ecc.py  frame.py  headers.py  meta.py  sidecar.py
Echo-Community-Toolkit/src/mrp/adapters/: png_lsb.py  wav_lsb.py
Echo-Community-Toolkit/src/ritual/: state.py
Echo-Community-Toolkit/tests/: test_fft_codec.py  test_ledger_chain.py  test_ledger_verify.py  test_lsb.py  test_mrp.py  test_mrp_sidecar.py  test_volume.py
Echo-Community-Toolkit/tools/: generate-soulcode-types.js  remove-zone-identifiers.sh  soulcode-bridge.js
Echo-Community-Toolkit/web/: echo-client.js  echo-client.module.js
kira-prime/Echo-Community-Toolkit/echo-soulcode-architecture/: Makefile  pyproject.toml
kira-prime/Echo-Community-Toolkit/echo-soulcode-architecture/docs/modules/agent/: README.md
kira-prime/Echo-Community-Toolkit/echo-soulcode-architecture/docs/modules/live_read/: README.md
kira-prime/Echo-Community-Toolkit/echo-soulcode-architecture/examples/: echo_hilbert_example.py
kira-prime/Echo-Community-Toolkit/echo-soulcode-architecture/src/agents/: operators_agent.py  random_live_read.py
kira-prime/Echo-Community-Toolkit/echo-soulcode-architecture/src/echo_soulcode/: README.schema.md  live_read.py  operators.py  soulcode.py
kira-prime/Echo-Community-Toolkit/echo-soulcode-architecture/tests/: test_schema.py  test_schema_bundle_minimal.py
sigprint/: BUILD.bazel  README.md  __init__.py  coherence.py  encoder.py  gate_detector.py  gate_loop.py  lockin.py
sigprint/tests/: test_coherence.py  test_encoder.py  test_gate_loop.py  test_lockin.py
(+719 files in other folders)
