[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "g2v"
version = "0.1.0"
description = "Glyph-to-Volume toolkit (volume ops + FFT + CLI)"
readme = "README_LLM.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.scripts]
g2v = "g2v.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
include = ["g2v*"]
exclude = ["*.tests", "tests*"]

